--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-html,body{padding:0;margin:0;box-sizing:border-box;scroll-behavior:smooth;max-width:1920px}ul{list-style:none}a{text-decoration:none}a:hover{text-decoration:none}
+html,body{padding:0;margin:0;box-sizing:border-box;scroll-behavior:smooth;max-width:1920px;font-family:'Poppins' , sans-serif}ul{list-style:none}a{text-decoration:none}a:hover{text-decoration:none}
