--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,9 +1,25 @@
+$light : #009bfa;
+$dark: #193989;
+$dark2: #001254;
+
+$card-event1 : #1450d2;
+$card-event2 : #01a49c;
+$card-event3 : #009bfa;
+
+$bg-body: #ebebeb;
+$bg-about: #1450d2;
+$bg-footer: #707070;
+
+
+
+
 html, body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     max-width: 1920px;
+    font-family: 'Poppins' , sans-serif;
 }
 
 ul {
