--- a/scss/_toggler.scss
+++ b/scss/_toggler.scss
@@ -9,15 +9,20 @@
     height: 100px;
     cursor: pointer;
     transition: all .5s ease-in-out;
-    top: 2.5em;
+    top: 2em;
     right: 0em;
+    
 
     &:focus , &:active {
-        outline: none;
+        outline: none!important;
+        -webkit-tap-highlight-color: transparent;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
     }
     
-    
-
     .lines {
         width: 30px;
         height: 3px;
@@ -26,9 +31,8 @@
         border-radius: 5px;
 
         
-        
-        &:nth-child(2) {
-           
+
+        &:nth-child(2) {           
             margin: .3em 0;
 
             &.open {
