--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,13 +9,12 @@ nav {
     width: 100%;
 }
 .container-nav {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     text-align: center;
     width: 100%;
     padding: .5em 0;
-    
     background: $bg-body;
 
         .margin {
