--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,9 @@
 nav {
     position: relative;
     width: 100%;
+    z-index: 999;
+    
+    
 }
 .container-nav {
     position: relative;
@@ -14,6 +17,8 @@ nav {
     left: 0;
     text-align: center;
     width: 100%;
+    
+    
     padding: .5em 0;
     background: $bg-body;
 
@@ -33,13 +38,12 @@ nav {
                 }
             }
             .name {
+                opacity: 0;
                 position: absolute;
                 left: 20%;
-                top: 30%;
+                top: 120%;
                 transform: translate(-30%, -20%);
             }
-
-            
 
             .nav-items {
                 position: absolute;  
@@ -51,8 +55,7 @@ nav {
                 transition: all 1s ease-in-out;
                 opacity: 0;
                    
-                li {
-                    
+                li { 
                     padding: 1em;
                     background: $bg-body;
                     margin: 2em 2em;
@@ -64,6 +67,54 @@ nav {
                 }
             }
         }
+}
+
+// Landing
+.container-landing {
+    border-top: 1px solid $dark2;
+    background: url('../images/banner.jpg');
+    width: 100%;
+    height: 80vh;
+    background-position: right;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+    position: relative;
+    
+    .margin {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+
+        .dots {
+            width: 50%;
+            height: 3px;
+            background: whitesmoke;
+        }
+
+        h3, h2, h1 {
+            margin: 0;
+            padding: 0;
+            text-shadow: 2px 2px 4px black;
+        }
+
+        h1, h2 {
+            font-weight: 700;
+        }
+
+        h1 {
+            font-size: 3rem;   
+        }
+
+        h2 {
+            font-size: 2.5rem;
+        }
+
+        h3 {        
+            font-weight: 300;
+        }
+    }
 }
 
 
