--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ nav {
     
     
     padding: .5em 0;
-    background: $bg-body;
+    background: white;
 
         .margin {
             display: flex;
