--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,6 +1,50 @@
 
-/* Extra large (xl) devices (large desktops, 1200 and up ) */
-@media (min-width : 1200px) { }
+/* Small (sm) devices (landscape phones 576 and up */
+@media (min-width : 576px) { 
+
+    #navigation {
+        .container-nav {
+            .margin {
+                .logo {
+                    img {
+                        
+                        width: 10%;
+                    }
+                }
+            }
+        }
+    }
+
+    .container-landing {
+        background-position: top;
+
+        .margin {
+
+            h3, h2, h1 {
+                
+                text-shadow: 1px 1px 2px black;
+            }
+            
+        }
+    }
+}
+
+/* Medium (md) devices (tablets, 768 and up */
+@media (min-width : 768px) {
+
+    #navigation {
+        .container-nav {
+            .margin {
+                .logo {
+                    img {
+                        
+                        width: 20%;
+                    }
+                }
+            }
+        }
+    }
+ }
 
 /* Large (lg) devices (desktops, 992 and up */
 @media (min-width : 992px) {
@@ -27,7 +71,7 @@
                 width: 10%;
                 
                 img {
-                    width: 80%;
+                    width: 80%!important;
                 }
             }
 
@@ -87,9 +131,9 @@
     }
  }
 
-/* Medium (md) devices (tablets, 768 and up */
-@media (min-width : 768px) { }
 
-/* Small (sm) devices (landscape phones 576 and up */
-@media (min-width : 576px) { }
+/* Extra large (xl) devices (large desktops, 1200 and up ) */
+@media (min-width : 1200px) { }
+
+
 
