--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -11,6 +11,20 @@
                         width: 10%;
                     }
                 }
+
+                .nav-items {
+                    
+                    li { 
+                        padding: .5em;
+                        
+                        margin: 1em 1em;
+    
+                        a {
+                            color: black;
+                            
+                        }
+                    }
+                }
             }
         }
     }
