--- a/scss/_lg.scss
+++ b/scss/_lg.scss
@@ -88,6 +88,7 @@
             .container-cards {
                 margin: 2em 0;
                 display: flex;
+                flex-direction: row;
                 justify-content: space-between;
     
                 .card {
