--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,13 +134,19 @@ nav {
             margin-top: 0;
         }
 
+    
         .container-cards {
             display: flex;
             flex-direction: column;
             margin: 2em 0;
-            width: 100%;
+            
+           
+            
 
             .card {
+                display: flex;
+                flex-direction: column;
+                position: relative;
                 width: 90%;
                 margin: 1em auto;
                 padding: 1em;
