--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,6 @@ nav {
     width: 100%;
     z-index: 999;
     
-    
 }
 .container-nav {
     position: relative;
@@ -140,9 +139,6 @@ nav {
             flex-direction: column;
             margin: 2em 0;
             
-           
-            
-
             .card {
                 display: flex;
                 flex-direction: column;
@@ -153,23 +149,27 @@ nav {
                 box-shadow: 0px 0px 5px gray;
                 background: whitesmoke;
 
+                h3 {
+                    font-weight: 700;
+                }
                 img {
                     width: 100%;
+                    clip-path: polygon(25% 0, 100% 0, 100% 75%, 75% 100%, 0 100%, 0 25%);
                     
                 }
                 &:nth-child(1) {
                     color : $card-event1;
-                    border-bottom: 5px solid $card-event1;
+                    border-bottom: 10px solid $card-event1;
                 }
 
                 &:nth-child(2) {
                     color : $card-event2;
-                    border-bottom: 5px solid $card-event2;
+                    border-bottom: 10px solid $card-event2;
                 }
 
                 &:nth-child(3) {
                     color : $card-event3;
-                    border-bottom: 5px solid $card-event3;
+                    border-bottom: 10px solid $card-event3;
                 }
             }
 
