--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,13 +172,50 @@ nav {
                     border-bottom: 10px solid $card-event3;
                 }
             }
+        }   
+    }
+}
 
+ 
+// About
+.container-about {
+    width: 100%;
+    height: 100%;
+    background: url('../images/fractal.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    color: whitesmoke;
+    text-align:center;
+    padding: 4em 0;
+
+    .margin {
+        
+        h3 {
+            font-size: 2rem;
+            padding: 0;
+            margin: 0;
 
         }
 
-        
+        button {
+            background: transparent;
+            border: 1px solid whitesmoke;
+            color: whitesmoke;
+            font-family: 'Poppins';
+            font-size: 1rem;
+            font-weight: 700;
+            padding: 1em;
+
+            &:hover{ 
+                color: $bg-about;
+                background: whitesmoke;
+            }
+        }
     }
+    
 }
+
 
 
 
