--- a/scss/style.scss
+++ b/scss/style.scss
@@ -148,6 +148,8 @@ nav {
                 padding: 1em;
                 box-shadow: 0px 0px 5px gray;
                 background: whitesmoke;
+                margin-left: 1em;
+                margin-right: 1em;
 
                 h3 {
                     font-weight: 700;
@@ -216,6 +218,98 @@ nav {
     
 }
 
+//Events
+#events {
+    .card {
+        background: $bg-about;
+        position: relative;
+        color: whitesmoke;
+        border-bottom: none;
+        margin-left: 1em;
+        margin-right: 1em;
+
+       
+        h4 {
+            
+            padding: .3em;
+            margin: 0;
+            text-align: center;
+            width: 30%;
+            background: $dark2;
+            
+            span {
+                font-size: 2rem;
+                padding: 0;
+                margin: 0;
+            }
+        }
+
+        p {
+            font-size: .8rem;
+        }
+
+        .btn-events {
+            background: transparent;
+            border: 1px solid whitesmoke;
+            color: whitesmoke;
+            font-family: 'Poppins';
+            font-size: .8rem;
+            font-weight: 700;
+            padding: .3em;
+            width: 50%;
+            margin: 1em 0;
+
+            &:hover{ 
+                color: $bg-about;
+                background: whitesmoke;
+            }
+        }
+
+        .address {  
+            position: relative;
+            text-align: right;
+            padding: 0;
+            margin: 0;
+            color: black;
+            font-size: 1rem;
+            font-weight: 700;
+        }
+    }
+}
+
+.container-footer {
+    background: $bg-footer;
+    color : whitesmoke;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 1em;
+    text-align: center;
+    font-size: .5rem;
+    .margin {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-items: center;
+
+        .socials {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            a {
+                text-decoration: none;
+                color: whitesmoke;
+                margin-left: 1em;
+                margin-top: 1em;
+                
+                &:hover{
+                    color: $dark2
+                }
+            }
+        }
+        
+    }
+}   
 
 
 
