fixed nav landscape

--- a/scss/_sm.scss
+++ b/scss/_sm.scss
@@ -3,6 +3,7 @@
 
     #navigation {
         .container-nav {
+            position: relative!important;
             .margin {
                 .logo {
                     img {
