--- a/scss/_lg.scss
+++ b/scss/_lg.scss
@@ -48,7 +48,7 @@
             }
 
             .nav-items {
-                position: relative;
+                position: relative!important;
                 width:65%;
                 background: none;
                 display: flex;
