--- a/scss/_sm.scss
+++ b/scss/_sm.scss
@@ -13,6 +13,8 @@
                 }
 
                 .nav-items {
+                    position: fixed;
+                    top:0;
                     
                     li { 
                         padding: .5em;
