--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -53,3 +53,8 @@ a {
     flex-direction: row;
     justify-content: space-between;
 }
+
+.underline {
+    border-bottom: 2px solid $dark2;
+    
+}
