--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,7 @@ nav {
 
                     a {
                         color: black;
-                        
+                        transition: all .1s ease-in-out;
                     }
                 }
             }
